# ff

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-deb.sh  build.cmd  build.sh  clean.cmd  clean.sh
.github/workflows/: ci.yml  docs.yml
cmake/: ff-config.cmake.in  ff-helpers.cmake  ff.pc.in
debian/: changelog  control  copyright  libff-dev.install  libff-doc.install  libff1.install  rules
doc/: CMakeLists.txt  Doxyfile  Makefile
doc/md/: 20-design.md  30-codestyle.md  40-extending.md  50-benchmarks.md
doc/tex/: command.tex  defines.tex  doxygen.tex  ff.sty  font.tex  footer.tex  geometry.tex  header.tex  index.tex  listing.tex  page_footer.tex  page_header.tex  pdf.tex  structure.tex  table.tex  title.tex  watermark.tex
examples/ffsh/: CMakeLists.txt  README.md  build.sh  clean.sh
examples/ffsh/src/: ffsh_version.h.in  main.c
fuzz/: CMakeLists.txt  ff_eval_fuzz.c
src/: ff.c  ff.h  ff_base_p.h  ff_bt_stack.c  ff_bt_stack_p.h  ff_config_p.h  ff_dict.c  ff_dict_p.h  ff_error.h  ff_exec_setup_p.h  ff_exec_teardown_p.h  ff_heap.c  ff_heap_p.h  ff_md.c  ff_md.h  ff_opcode_meta.c  ff_opcode_meta_p.h  ff_opcode_p.h  ff_p.h  ff_platform.h  ff_stack.c  ff_stack_p.h  ff_state_p.h  ff_tok_state_p.h  ff_token_p.h  ff_tokenizer.c  ff_tokenizer_p.h  ff_types_p.h  ff_version.h.in  ff_word.c  ff_word_def_p.h  ff_word_flags_p.h  ff_word_p.h
src/words/: ff_words_array.c  ff_words_array_p.h  ff_words_comp.c  ff_words_comp_p.h  ff_words_conio.c  ff_words_conio_p.h  ff_words_ctrl.c  ff_words_ctrl_p.h  ff_words_debug.c  ff_words_debug_p.h  ff_words_dict.c  ff_words_dict_p.h  ff_words_eval.c  ff_words_eval_p.h  ff_words_field.c  ff_words_field_p.h  ff_words_file.c  ff_words_file_p.h  ff_words_heap.c  ff_words_heap_p.h  ff_words_math.c  ff_words_math_p.h  ff_words_real.c  ff_words_real_p.h  ff_words_stack.c  ff_words_stack2.c  ff_words_stack2_p.h  ff_words_stack_p.h  ff_words_string.c  ff_words_string_p.h  ff_words_var.c  ff_words_var_p.h
test/: CMakeLists.txt  driver.c
test/bench/: b1.ff  b1.gf  b1.lua  b2.ff  b2.gf  b2.lua  b3.ff  b3.gf  b3.lua  b4.ff  b4.gf  b4.lua  b5.ff  b5.gf  b5.lua  c_b1.c  c_b2.c  c_b3.c  run.sh
test/cases/: 001_arith.ff  002_stack.ff  003_control.ff  004_variables.ff  005_recursion.ff  006_does.ff  007_errors.ff  008_memsafe.ff  009_defer.ff  010_catch.ff  011_watchdog.ff
